rest-manager-category

--- a/rest_manager/index.html
+++ b/rest_manager/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Restro Manager</title>
     <link rel="stylesheet" type="text/css" href="main.css"></link>
 </head>
@@ -23,7 +25,10 @@
     </div>
 
 </body>
-<script type="text/javascript" src="index.js">
+<script type="text/javascript" src="data.js"></script>
+<script type="text/javascript" src="fill.js"></script>
+<script type="text/javascript" src="listeners.js"></script>
+<script type="text/javascript" src="index.js"></script>
 
 </script>
 </html>
