--- a/rest_manager/index.html
+++ b/rest_manager/index.html
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="data.js"></script>
 <script type="text/javascript" src="fill.js"></script>
 <script type="text/javascript" src="listeners.js"></script>
+<script type="text/javascript" src="orders.js"></script>
 <script type="text/javascript" src="index.js"></script>
 
 </script>
