--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello_World
+<html>
+
+    <body>
+        <div>
+            hello_world
+            ;[...work_in_progress]
+
+            meantime
+
+            ...
+        </div>
+        <div>
+            <div><a href='darth_vader/index.html'>Darth Vader</a></div>
+            <div><a href='honey_pot/index.html'>honey_pot</a></div>
+            <div><a href='rest_manager/index.html'>Restaurant Manager</a></div>
+            <div><a href='sudoku/index.html'>sudoku</a></div>
+            <div><a href='algo/bubble/index.html'>Bubble Sort</a></div>
+        </div>
+    </body>
+</html>
