--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div><a href='honey_pot/index.html'>honey_pot</a></div>
             <div><a href='rest_manager/index.html'>Restaurant Manager</a></div>
             <div><a href='sudoku/index.html'>sudoku</a></div>
-            <div><a href='algo/sort/index.html'>Bubble Sort</a></div>
+            <div><a href='algo/sort/index.html'>Sorting Algorithms</a></div>
         </div>
     </body>
 </html>
