--- a/cryptoIndex/index.html
+++ b/cryptoIndex/index.html
@@ -48,6 +48,7 @@
             </div>
             <nav class="navbar fixed-bottom navbar-light bg-light">
                 <a class="navbar-brand" href="https://www.github.com/albseb511">Albert Sebastian</a>
+                <a class="navbar-brand" href="https://www.github.com/albseb511">Made with Bootstrap CSS - HTML - jQuery - JavaScript - Chart.js</a>
                 <a class="navbar-brand" href="https://www.masaischool.com">Made in Masai School</a>
               </nav>
         </div>
