fixed: base site

--- a/index.html
+++ b/index.html
@@ -1,22 +1,65 @@
 <html>
-    <style>
-    </style>
+    <head>
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    </head>
+
     <body>
-        <div>
-            hello_world
-            ;[...work_in_progress]
+        <div class="w-100 h-100 container-fluid"> 
+            <div class="row h-100 bg-primary bg-gradient-primary">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center d-flex flex-column justify-content-between">
+                    <div class="p-5">
+                        <div class="pt-3">
+                            <img width="200px" src="https://d27028dliefpk3.cloudfront.net/static/team/albert.jpeg" class="rounded-circle" alt="...">
+                        </div>
+                        <p class="mt-2 h3 text-white">Albert Sebastian</p>
+                        <p class="h3">
+                            <small class="text-light">Programmer</small>
+                        </p>
+                        <div class="text-center text-white icons">
+                            <a href="https://github.com/albseb511">
+                                <i class="fa fa-linkedin fa-lg p-1" aria-hidden="true"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/albseb/">
+                                <i class="fa fa-github fa-lg p-1" aria-hidden="true"></i>
+                            </a>
+                            <a href="https://twitter.com/albeinstein92">
+                                <i class="fa fa-twitter fa-lg p-1" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="text-left align-self-center  footer-left text-light">
+                        © Copyright 2020. All rights reserved.
+                    </div>
+                </div>
+                <div id="main-content" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 bg-dark text-white">
+                    <div class="jumbotron bg-dark">
+                        <h1 class="display-4">Albert Sebastian</h1>
+                        <p class="lead">• Build • Learn • Sleep •</p>
+                        <hr class="my-4">
+                        <p>• React • JavaScript • CSS • Bootstrap • Node • Express • MongoDB • MySQL •</p>
+                        <p class="lead">
+                          <a class="btn btn-primary btn-lg" href="https://github.com/albseb511" role="button">
+                            <i class="fa fa-github fa-lg p-1" aria-hidden="true"></i>  
+                            Github
+                        </a>
+                        </p>
 
-            meantime
-
-            ...
+                        <!-- <ul class="list-group">
+                            <a href="darth_vader/index.html" class="list-group-item">Darth Vader</a>
+                            <a href="honey_pot/index.html" class="list-group-item">Honey Pot</a>
+                            <a href="rest_manager/index.html" class="list-group-item">Restaurant Manager</a>
+                            <a href="sudoku/index.html" class="list-group-item">Sudoku</a>
+                            <a href="algo/sort/index.html" class="list-group-item">Sorting Algos</a>
+                            <a href="cryptoIndex/index.html" class="list-group-item">Crypto Index</a>
+                        </ul> -->
+                      </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <div><a href='darth_vader/index.html'>Darth Vader</a></div>
-            <div><a href='honey_pot/index.html'>honey_pot</a></div>
-            <div><a href='rest_manager/index.html'>Restaurant Manager</a></div>
-            <div><a href='sudoku/index.html'>sudoku</a></div>
-            <div><a href='algo/sort/index.html'>Sorting Algorithms (Bubble,Insertion,Selection)</a></div>
-            <div><a href='cryptoIndex/index.html'>Crypto Index</a></div>
-        </div>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </body>
 </html>
