--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
                 </div>
                 <div id="main-content" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 bg-dark text-white">
                     <div class="jumbotron bg-dark">
-                        <h1 class="display-4">Albert Sebastian</h1>
-                        <p class="lead">• Build • Learn • Sleep •</p>
+                        <h1 class="display-4"></h1>
+                        <p class="lead">• Build • Learn • Think • Sleep •</p>
                         <hr class="my-4">
                         <p>• React • JavaScript • CSS • Bootstrap • Node • Express • MongoDB • MySQL •</p>
+                        <p> I am an engineer and I build things. I started from building hardware products,<br/>worked with IoT product development and wireless mesh network applications. </p>
+                        <p> Since childhood I loved programming, and now I like to solve real world problems with it </p>
+                        <p> What are you solving today? </p>
                         <p class="lead">
                           <a class="btn btn-primary btn-lg" href="https://github.com/albseb511" role="button">
                             <i class="fa fa-github fa-lg p-1" aria-hidden="true"></i>  
