--- a/notes/axios/index.html
+++ b/notes/axios/index.html
@@ -2038,7 +2038,7 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
   </head>
   <body>
     <div class="reveal">
-      <div class="slides slides"><section class="slides-section"><section class="slide"><h1><code>Axios</code> and making HTTP requests in ReactJS</h1>
+      <div class="slides slides"><section class="slides-section"><section class="slide"><h1><code>Axios and making HTTP requests in ReactJS</code></h1>
 <p>Front end applications that don't communicate with server seems a bit redundant. So lets connect our React Apps to a server. </p>
 <p>While we could use the good old <code>XMLHttpRequest</code>, its lack of inbuilt support for promises makes this a less than ideal option. </p>
 <p>Another viable option is the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch">Fetch API</a> introduced in ES6 and expanded in ES7. </p>
